# siphon

./: .gitignore  README.md  pyproject.toml
docs/specs/: 2026-03-19-siphon-etl-pipeline-design.md
siphon/: __init__.py  cli.py
siphon/config/: __init__.py  loader.py  schema.py  types.py
siphon/core/: __init__.py  extractor.py  mapper.py  pipeline.py  review_cli.py  reviewer.py  validator.py
siphon/db/: __init__.py  differ.py  engine.py  inserter.py  models.py  upsert.py
siphon/llm/: __init__.py  client.py  prompts.py
siphon/sources/: __init__.py  base.py  spreadsheet.py  xml.py
siphon/transforms/: __init__.py  builtins.py  loader.py
siphon/utils/: __init__.py  errors.py  formatters.py  logger.py
tests/: conftest.py  test_cli.py  test_cli_diff.py  test_init_template.py  test_integration.py  test_integration_diff.py  test_integration_upsert.py  test_xml_integration.py
tests/config/: test_loader.py  test_schema.py  test_types.py  test_validate.py
tests/core/: test_deduplication.py  test_error_recovery.py  test_extractor.py  test_mapper.py  test_multi_file.py  test_pipeline.py  test_pipeline_diff.py  test_review_cli.py  test_reviewer.py  test_validator.py
tests/db/: test_differ.py  test_engine.py  test_inserter.py  test_inserter_upsert.py  test_models.py  test_upsert.py
tests/fixtures/: companies_upsert_config.yaml  companies_v1.csv  companies_v2.csv  example_config.yaml  incident_config.yaml  incident_transforms.py  sample_companies.csv  sample_incidents.xml
tests/llm/: test_client.py  test_prompts.py
tests/sources/: test_spreadsheet.py  (+1 more)
(+8 files in other folders)
